--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,8 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost/db_blogPessoal?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.jpa.generate-ddl=true
+spring.datasource.url=${JDBC_DATASOURCE_URL}
 spring.jpa.show-sql=true
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=Brazil/East
 
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
